--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -5,10 +5,10 @@ front_cloud_to_scan:
     pointcloud_topic: /front_camera/points
     scan_topic: /front_camera/scan
     frequency: 30
-    x_max: 20.
-    x_min: .6
-    y_max: 20.
-    y_min: -20.
+    x_max: 20.0
+    x_min: 0.6
+    y_max: 20.0
+    y_min: -20.0
     z_max: 0.0
     z_min: -0.25
     angle_max: 0.785
@@ -38,17 +38,21 @@ path_planning:
     goal_topic: /goal_pose
     path_topic: /path
     robot_collision_radius: 1.5
-    goal_radius: 2.
+    goal_radius: 2.0
     steering_value: 0.24 # не ставить меньше 0.2
-    path_discrete: 0.99
+    path_discrete: 1.0
     robot_base_frame: map
     grid_resolution: 0.1
+    timeout: 2.0
 
 waypoint_following:
   ros__parameters:
     frequency: 30
     odom_topic: /odom
     goal_topic: /goal_pose
-    waypoints: [19.8653, -10.3495, 29.2345, -23.4966]
+    goal_radius: 5.0
+#    waypoints: [19.8653, -10.3495, 29.2345, -23.4966, 23.618, -34.74]
+#    waypoints: [23.618, -34.74]
+    waypoints: [20.6453, -9.80267, 24.3003, -31.9225]
     map_frame: map
-#    start_following: False
+    start_following: False # Начинать следование только после запуска и инициализации всех нод
