Deleted old nodes

--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -51,8 +51,6 @@ waypoint_following:
     odom_topic: /odom
     goal_topic: /goal_pose
     goal_radius: 5.0
-#    waypoints: [19.8653, -10.3495, 29.2345, -23.4966, 23.618, -34.74]
-#    waypoints: [23.618, -34.74]
-    waypoints: [20.6453, -9.80267, 24.3003, -31.9225, 13.7962, -46.5684, -3.74152, -51.6982, -0.0843143, -0.171923]
+    waypoints: [20.6453, -9.80267, 24.3003, -31.9225, 13.7962, -46.5684, -3.74152, -51.6982, -0.0843143, -0.171923] # метрические x и y координаты точек
     map_frame: map
     start_following: False # Начинать следование только после запуска и инициализации всех нод
