--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -5,7 +5,7 @@ front_cloud_to_scan:
     pointcloud_topic: /front_camera/points
     scan_topic: /front_camera/scan
     frequency: 30
-    x_max: 12.0
+    x_max: 32.0
     x_min: 0.7
     y_max: 20.0
     y_min: -20.0
@@ -44,6 +44,30 @@ path_planning:
     robot_base_frame: map
     grid_resolution: 0.1
     timeout: 2.0
+
+path_mapping:
+  ros__parameters:
+    frequency: 30
+    front_scan_topic: /front_camera/scan
+    rear_scan_topic: /rear_camera/scan
+    odom_topic: /odom
+    map_topic: /map
+    robot_base_frame: chassis
+    robot_collision_radius: 2.5
+    map_size: 200
+    local_map_size: 20
+    map_resolution: 0.1
+    map_frame: map
+    front_scan_position: [ 2.2, 0.0, 0.0 ]
+    rear_scan_position: [ -2.2, 0.0, 0.0 ]
+    goal_topic: /goal_pose
+    path_topic: /path
+    path_collision_radius: 1.5
+    goal_radius: 2.
+    steering_value: 0.3
+    path_discrete: 1.5
+    path_base_frame: map
+    grid_resolution: 0.1
 
 waypoint_following:
   ros__parameters:
